Added separations categories directories (moving)